<resources>
    <string name="app_name">Navigation Trainer</string>
    <string name="profile">My Account</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>

    <string name="HomePageText">Welcome</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_football">All Football</string>

</resources>
