<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_baseline_account_circle_24px"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_baseline_subtitles_24px"
                android:title="@string/gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_baseline_slideshow_24px"
                android:title="@string/slideshow"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_baseline_build_24px"
                android:title="@string/tools"/>

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24px"
            android:title="@string/home"/>

    </group>
</menu>